@@ -1,3 +1,11 @@
+Development Portal (2019-01-14 shi)
+==============================
+Remove dates for transaction graphs
+CSS fix for humanitarian-scope
+Update print-friendly css
+Import example.xml for testing (AA-AAA-123456789-ABC123)
+
+
 Development Portal (2019-01-11 shi)
 ==============================
 Add legend to individual transaction graphs in SAVi
